--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && npm run tailwind",
+    "build": "tsc -p tsconfig.production.json && vite build && npm run tailwind",
     "tailwind": "npx tailwindcss -o ./dist/index.css --minify",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -40,11 +40,13 @@
     "release": "bash ./scripts/release.sh",
     "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
