--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
-    "test": "vitest",
+    "test": "vitest run --coverage",
     "prettier": "prettier --write .",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -68,6 +68,8 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
     "autoprefixer": "^10.4.18",
     "chromatic": "^11.1.1",
     "eslint": "^8.57.0",
@@ -87,6 +89,7 @@
     "postcss": "^8.4.37",
     "prettier": "^3.2.5",
     "storybook": "^8.0.2",
+    "storybook_vitest_addon": "^0.1.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
