--- a/package.json
+++ b/package.json
@@ -45,9 +45,12 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.2"
+    "lucide-react": "^0.363.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.2.23",
