--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "access": "public"
   },
   "name": "jsui-components-react",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -p tsconfig.production.json && vite build && npm run tailwind",
-    "tailwind": "npx tailwindcss -o ./dist/index.css --minify",
+    "tailwind": "npx tailwindcss -o ./dist/index.css",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
@@ -73,7 +73,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.4.0",
     "@vitest/ui": "^1.4.0",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "chromatic": "^11.1.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "19.0.4",
@@ -89,7 +89,7 @@
     "husky": "^8.0.0",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
-    "postcss": "^8.4.37",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "storybook": "^8.0.2",
     "storybook_vitest_addon": "^0.1.5",
